--- a/ramonriping_122140078_pertemuan6/pyramid_matakuliah/development.ini
+++ b/ramonriping_122140078_pertemuan6/pyramid_matakuliah/development.ini
@@ -4,20 +4,26 @@
 ###
 
 [app:main]
-use = egg:pyramid_mahasiswa
+use = egg:pyramid_matakuliah
 
-pyramid.reload_templates = false
+pyramid.reload_templates = true
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
 pyramid.debug_routematch = false
 pyramid.default_locale_name = en
+pyramid.includes =
+    pyramid_debugtoolbar
 
-sqlalchemy.url = sqlite:///%(here)s/pyramid_mahasiswa.sqlite
+sqlalchemy.url = postgresql://pyramid_user:pyramid_pass@localhost:5432/pyramid_matakuliah
 
 retry.attempts = 3
 
+# By default, the toolbar only appears for clients from IP addresses
+# '127.0.0.1' and '::1'.
+# debugtoolbar.hosts = 127.0.0.1 ::1
+
 [pshell]
-setup = pyramid_mahasiswa.pshell.setup
+setup = pyramid_matakuliah.pshell.setup
 
 ###
 # wsgi server configuration
@@ -25,13 +31,13 @@ setup = pyramid_mahasiswa.pshell.setup
 
 [alembic]
 # path to migration scripts
-script_location = pyramid_mahasiswa/alembic
+script_location = pyramid_matakuliah/alembic
 file_template = %%(year)d%%(month).2d%%(day).2d_%%(rev)s
 # file_template = %%(rev)s_%%(slug)s
 
 [server:main]
 use = egg:waitress#main
-listen = *:6543
+listen = localhost:6543
 
 ###
 # logging configuration
@@ -39,7 +45,7 @@ listen = *:6543
 ###
 
 [loggers]
-keys = root, pyramid_mahasiswa, sqlalchemy
+keys = root, pyramid_matakuliah, sqlalchemy
 
 [handlers]
 keys = console
@@ -48,13 +54,13 @@ keys = console
 keys = generic
 
 [logger_root]
-level = WARN
+level = INFO
 handlers = console
 
-[logger_pyramid_mahasiswa]
-level = WARN
+[logger_pyramid_matakuliah]
+level = DEBUG
 handlers =
-qualname = pyramid_mahasiswa
+qualname = pyramid_matakuliah
 
 [logger_sqlalchemy]
 level = WARN
